--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ django = "^5.1.4"
 mysqlclient = "^2.2.6"
 django-environ = "^0.11.2"
 pillow = "^11.0.0"
+requests = "^2.32.3"
+django-allauth = "^65.3.0"
+cryptography = "^44.0.0"
+pyjwt = "^2.10.1"
 
 
 [build-system]
