--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ Django==5.1.4
 django-environ==0.11.2
 mysqlclient==2.2.6
 sqlparse==0.5.2
+PyJWT==2.10.1
+requests==2.32.3
+django-allauth ==65.3.0
+cryptography == 44.0.0
