--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ requests = "^2.32.3"
 django-allauth = "^65.3.0"
 cryptography = "^44.0.0"
 pyjwt = "^2.10.1"
+django-storages = {extras = ["boto3"], version = "^1.14.4"}
+python-dotenv = "^1.0.1"
 
 
 [build-system]
